--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,9 @@
 <%- include('./partials/html-head') %>
+<link rel="stylesheet" href="../stylesheets/index.css">
 <%- include('./partials/nav') %>
 
 <main>
-  <h1>hello, <%= user ? user.profile.name : "friend" %></h1>
+  <h1> <%= user ? `Hello ${user.profile.name}`  : "welcome to your daily entry logs. Please log in." %></h1>
   <% if (user?.profile.avatar) { %>
     <div>
       <img
@@ -10,7 +11,15 @@
         alt="<%= user.profile.name %> avatar"
       />
     </div>
+    <div>
+      <h1>Welcome to MindLog</h1>
+    </div>
+    <p>Please see your entries below:</p>
   <% } %>
+  <section>
+    <h1>Welcome to MindLog</h1>
+    <h4>A therapy app for your mental health.</h3>
+  </section>                                    
 </main>
 
 <%- include('./partials/footer') %>
