--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <%- include('./partials/nav') %>
 
 <main>
-  <h1> <%= user ? `Hello ${user.profile.name}`  : "welcome to your daily entry logs. Please log in." %></h1>
+  <h1> <%= user ? `Hello ${user.profile.name}`  : "welcome to MindLog. Please log in." %></h1>
   <% if (user?.profile.avatar) { %>
     <div>
       <img
@@ -17,8 +17,6 @@
     <p>Please see your entries below:</p>
   <% } %>
   <section>
-    <h1>Welcome to MindLog</h1>
-    <h4>A therapy app for your mental health.</h3>
   </section>                                    
 </main>
 
