--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <%- include('./partials/nav') %>
 
 <main>
-  <h1> <%= user ? `Hello ${user.profile.name}`  : "welcome to MindLog. Please log in." %></h1>
+  <h1> <%= user ? `Hello ${user.profile.name}`  : "Welcome to MindLog. Please log in." %></h1>
   <% if (user?.profile.avatar) { %>
     <div>
       <img
@@ -13,6 +13,12 @@
     </div>
     <div>
       <h1>Welcome to MindLog</h1>
+      <a href="/entries/new">
+        <%- title === 'Add Entry' ? 'class="active"' : ''  %>
+        <button>
+          ADD ENTRY
+      </button>
+      </a>
     </div>
     <p>Please see your entries below:</p>
   <% } %>
