--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,6 +19,21 @@
           ADD ENTRY
       </button>
       </a>
+
+      <a href="/entries/edit">
+        <%- title === 'EDIT' ? 'class="active"' : ''  %>
+        <button>
+          EDIT
+      </button>
+      </a>
+
+      <a href="/entries/delete">
+        <%- title === 'Delete' ? 'class="active"' : ''  %>
+        <button>
+          DELETE
+      </button>
+      </a>
+
     </div>
     <p>Please see your entries below:</p>
   <% } %>
