--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <%- include('./partials/nav') %>
 
 <main>
-  <h1> <%= user ? `Hello ${user.profile.name}`  : "Welcome to MindLog. Please log in." %></h1>
+  <h1> <%= user ? `Hello ${user.profile.name}`  : "Welcome to MindLog. 📝 Please log in." %></h1>
   <% if (user?.profile.avatar) { %>
     <div>
       <img
