--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
       <a href="/entries/new">
         <%- title === 'Add Entry' ? 'class="active"' : ''  %>
         <button>
-          ADD ENTRY
+          YOUR ENTRIES
       </button>
       </a>
 
