add edit and delete button to show view for entry

--- a/views/entries/show.ejs
+++ b/views/entries/show.ejs
@@ -8,7 +8,8 @@
   <h1><%= entry.name %> </h1>
   <h2> Patient indicted that <%= entry.help ? 'needs help' : 'does not need help' %> from their provider. </h2>
 </Section>
-<!-- <a href="/entries/edit">
+
+<a href="/entries/edit">
   <%- title === 'EDIT' ? 'class="active"' : ''  %>
   <button>
     EDIT
