create flip button

--- a/views/entries/new.ejs
+++ b/views/entries/new.ejs
@@ -41,7 +41,7 @@
   <li> 
     📝 
   <a href="/entries/<%= entry._id %>">
-    <%= entry.name %> </a> <%= entry.help ? 'needs help' : 'does not need help' %> 
+    <%= entry.name %> </a> <%= entry.help ? 'need help' : 'do not need help' %> 
   </li>
 <% }) %>
 </ul>     
