--- a/views/entries/show.ejs
+++ b/views/entries/show.ejs
@@ -1,15 +1,26 @@
+<!-- VIEW FOR INDIVIDUAL ENTRY BASED ON OWNER AND ENTRY ID -->
 <%- include('../partials/html-head') %>
 <link rel="stylesheet" href="../stylesheets/index.css">
 <%- include('../partials/nav') %>
 
 <Section>
-  <p><%= entry.owner.name%>... </p>
+  <p>User: <%= entry.owner.name%> </p>
   <p>Entry Details:</p>
   <h1><%= entry.name %> </h1>
-  <h2> Patient indicted that <%= entry.help ? 'needs help' : 'does not need help' %> from their provider. </h2>
+  
+  <% if (user) { %>
+    <form 
+    action="/entries/<%= entry._id %>/flip-help?_method=PATCH"
+    method="POST"
+    >
+    <button class="btn" type="submit">
+      You indicted that you  <%= entry.help ? 'need help' : 'do not need help' %> 
+    </button>
+  </form>
+  <% } %>
 </Section>
-
-<a href="/entries/edit">
+  
+<a href="/entries/<%= entry._id %>/edit">
   <%- title === 'EDIT' ? 'class="active"' : ''  %>
   <button>
     EDIT
@@ -21,6 +32,6 @@
   <button>
     DELETE
 </button>
-</a> -->
+</a> 
 
 <%- include('../partials/footer') %>
