create edit function

--- a/views/entries/edit.ejs
+++ b/views/entries/edit.ejs
@@ -4,7 +4,7 @@
 <section>
   <h1>Edit your entry </h1>
   <form 
-    action="/entry/<%= entry._id %>?_method=PUT"
+    action="/entries/<%= entry._id %>?_method=PUT"
     method="POST"
   >
     <label>
