restrict access and view to non-logged in users

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
     </div>
     <div>
       <h1>Welcome to MindLog</h1>
-      <a href="/entries/new">
+      <a href="/entries">
         <%- title === 'Add Entry' ? 'class="active"' : ''  %>
         <button>
           YOUR ENTRIES
