--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,7 +4,9 @@
 </head>
 <body>
   <nav>
+    <% if (user) { %>
     <a href="/entries"> ENTRIES </a> 
+    <% } %>
   <% if (user) { %>
       <a href="/auth/logout" class="right">
         <button type="submit">Logout</button>
