--- a/views/entries/edit.ejs
+++ b/views/entries/edit.ejs
@@ -7,16 +7,33 @@
     action="/entries/<%= entry._id %>?_method=PUT"
     method="POST"
   >
-    <label>
-      Name: 
-      <input 
-        type="text"
-        name="name" 
-        value="<%= entry.name %>" 
-        autocomplete="off"
-      >
-    </label>
+
   
+    <section>
+      <form 
+        action="/entries/<%= entry._id %>?_method=PUT"
+        method="POST"
+      >
+      <div>
+        <label for=" content-textarea" class="review-label">Type Entry Here:</label> 
+      </div>
+      <label>
+        <textarea 
+          type="text"
+          name="name" 
+          autocomplete="off"
+        ><%= entry.name %></textarea>
+      </label>
+      <label for="mood-rating">Rate Your Mood:</label>
+        <select name="mood" id="mood-rating">  
+        <option value="none" selected disabled hidden><%= entry.mood %> </option>
+        <option value="Happy">Happy</option>
+        <option value="Content">Content</option>
+        <option value="Sad">Sad</option>
+        </select>
+      
+    
+
     <button type="submit">Edit your entry</button>
   </form>
 </section>
