--- a/views/entries/new.ejs
+++ b/views/entries/new.ejs
@@ -24,7 +24,7 @@
           <!-- will id= work here? -->
         </div>
         <label for="mood-rating">Rate Your Mood:</label>
-          <select name="Rate Your Mood" id="mood-rating">  
+          <select name="mood" id="mood-rating">  
           <option value="Happy">Happy</option>
           <option value="Content">Content</option>
           <option value="Sad">Sad</option>
@@ -39,8 +39,9 @@
         <% entries.forEach(entry => { %>
           <li> 
             📝 
-            <a href="/entries/<%= entry._id %>">
-              <%= entry.name %> </a> <%= entry.help ? 'need help' : 'do not need help' %> 
+            <a href="/entries/<%= entry._id %>"> <%= entry.name %> </a>
+            <%= entry.help ? 'need help' : 'do not need help' %> 
+              <p>Your mood for this entry: <%= entry.mood %> </p>
             </li>
             <% }) %>
           </ul>     
