--- a/views/entries/show.ejs
+++ b/views/entries/show.ejs
@@ -10,16 +10,15 @@
   
   <% if (user) { %>
     <form 
-    action="/entries/<%= entry._id %>/flip-help?_method=PATCH"
-    method="POST"
-    >
-    <button class="btn" type="submit">
-      You indicted that you  <%= entry.help ? 'need help' : 'do not need help' %> 
-    </button>
-  </form>
+      action="/entries/<%= entry._id %>/flip-help?_method=PATCH" 
+      method="POST">
+      <button class="btn" type="submit">
+        You indicted that you  <%= entry.help ? 'need help' : 'do not need help' %> 
+      </button>
+    </form>
   <% } %>
 </Section>
-  
+  <p>Your mood for this entry: <%= entry.mood %> </p>
 <a href="/entries/<%= entry._id %>/edit">
   <%- title === 'EDIT' ? 'class="active"' : ''  %>
   <button>
@@ -27,11 +26,10 @@
 </button>
 </a>
 
-<a href="/entries/delete">
-  <%- title === 'Delete' ? 'class="active"' : ''  %>
-  <button>
-    DELETE
-</button>
-</a> 
+  <form action="/entries/<%= entry._id %>?_method=DELETE" method="POST">
+    <button class="btn" type="submit">
+      DELETE
+  </button>
+  </form>
 
 <%- include('../partials/footer') %>
