--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -6,6 +6,7 @@
   <nav>
     <% if (user) { %>
     <a href="/entries"> ENTRIES </a> 
+    <!-- <a href="/activities"> ACTIVITIES </a>  -->
     <% } %>
   <% if (user) { %>
       <a href="/auth/logout" class="right">
