create HOME link and adjust spacing on Nav bar

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,12 @@
       </button>
       </a>
 
-      
+      <a href="/activities">
+        <%- title === 'Add Entry' ? 'class="active"' : ''  %>
+        <button>
+          YOUR ACTIVITIES
+      </button>
+      </a>
 
     </div>
     
