--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,6 +29,12 @@ nav {
   min-height: 60px;
 }
 
+.links-container{
+  display: flex;
+  width: 525px;
+  justify-content: space-evenly;
+}
+
 main {
   display: flex;
   align-items: center;
