--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -5,9 +5,12 @@
 <body>
   <nav>
     <% if (user) { %>
-    <a href="/entries"> ENTRIES </a> 
-    <!-- <a href="/activities"> ACTIVITIES </a>  -->
-    <% } %>
+    <div class="links-container">
+      <a href="/"> HOME </a> 
+      <a href="/entries"> ENTRIES </a> 
+      <a href="/activities"> ACTIVITIES </a> 
+    </div>
+      <% } %>
   <% if (user) { %>
       <a href="/auth/logout" class="right">
         <button type="submit">Logout</button>
