--- a/views/activities/show.ejs
+++ b/views/activities/show.ejs
@@ -4,29 +4,28 @@
 <%- include('../partials/nav') %>
 
 <Section>
-  <p>User: <%= entry.owner.name%> </p>
+  <p>User: <%= activity.owner.name%> </p>
   <p>Entry Details:</p>
-  <h1><%= entry.name %> </h1>
+  <h1><%= activity.name %> </h1>
   
   <% if (user) { %>
     <form 
-      action="/entries/<%= entry._id %>/flip-help?_method=PATCH" 
+      action="/activities/<%= activity._id %>/flip-help?_method=PATCH" 
       method="POST">
       <button class="btn" type="submit">
-        You indicted that you  <%= entry.help ? 'need help' : 'do not need help' %> 
+        You indicted that you  <%= activity.help ? 'need help' : 'do not need help' %> 
       </button>
     </form>
   <% } %>
 </Section>
-  <p>Your mood for this entry: <%= entry.mood %> </p>
-<a href="/entries/<%= entry._id %>/edit">
+<a href="/activities/<%= activity._id %>/edit">
   <%- title === 'EDIT' ? 'class="active"' : ''  %>
   <button>
     EDIT
 </button>
 </a>
 
-  <form action="/entries/<%= entry._id %>?_method=DELETE" method="POST">
+  <form action="/activities/<%= activity._id %>?_method=DELETE" method="POST">
     <button class="btn" type="submit">
       DELETE
   </button>
