--- a/views/partials/html-head.ejs
+++ b/views/partials/html-head.ejs
@@ -4,4 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/stylesheets/style.css" />
+    <link 
+		id="favicon" 
+    rel="icon"
+    href="./assets/images/journal.png"
+    type="image/png" 
+    sizes="32x32"
+    >
     <title><%= title %></title>
