--- a/views/activities/show.ejs
+++ b/views/activities/show.ejs
@@ -1,34 +1,42 @@
 <!-- VIEW FOR INDIVIDUAL ENTRY BASED ON OWNER AND ENTRY ID -->
 <%- include('../partials/html-head') %>
-<link rel="stylesheet" href="../stylesheets/index.css">
+  <link rel="stylesheet" href="../stylesheets/index.css">
 <%- include('../partials/nav') %>
 
-<Section>
-  <p>User: <%= activity.owner.name%> </p>
-  <p>Entry Details:</p>
-  <h1><%= activity.name %> </h1>
-  
-  <% if (user) { %>
-    <form 
-      action="/activities/<%= activity._id %>/flip-help?_method=PATCH" 
-      method="POST">
-      <button class="btn" type="submit">
-        You indicted that you  <%= activity.help ? 'need help' : 'do not need help' %> 
-      </button>
-    </form>
-  <% } %>
-</Section>
-<a href="/activities/<%= activity._id %>/edit">
-  <%- title === 'EDIT' ? 'class="active"' : ''  %>
-  <button>
-    EDIT
-</button>
-</a>
+    <Section>
+      <p>
+        User: <%= activity.owner.name%>
+      </p>
+      <div class="activity-details">
+        <p>
+          Entry Details:
+        </p>
+        <hr>
+        <h1>
+          <%= activity.name %>
+        </h1>
+        <h3>
+          Type: <%= activity.type %>
+        </h3>
+      </div>
 
-  <form action="/activities/<%= activity._id %>?_method=DELETE" method="POST">
-    <button class="btn" type="submit">
-      DELETE
-  </button>
-  </form>
+      <% if (user) { %>
+        <form action="/activities/<%= activity._id %>/flip-help?_method=PATCH" method="POST">
+        </form>
+        <% } %>
+    </Section>
+    <% if (activity.owner.equals(user?.profile._id)) { %>
+      <a href="/activities/<%= activity._id %>/edit">
+        <%- title==='EDIT' ? 'class="active"' : '' %>
+          <button>
+            EDIT
+          </button>
+      </a>
 
-<%- include('../partials/footer') %>
+      <form action="/activities/<%= activity._id %>?_method=DELETE" method="POST">
+        <button class="btn" type="submit">
+          DELETE
+        </button>
+      </form>
+      <% } %>
+        <%- include('../partials/footer') %>
